c2rust/c2rust-transpile/tests/snapshots/snapshots__transpile@tenjin_globals.c.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/tenjin_globals.rs
input_file: c2rust-transpile/tests/snapshots/tenjin_globals.c
---
#![allow(
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_mut
)]
use ::std::process::ExitCode;
unsafe extern "C" fn foo(argc: i32) -> u8 {
    let mut x_xjtr_1: ::core::ffi::c_char = 'a' as ::core::ffi::c_char;
    return (argc as ::core::ffi::c_char as ::core::ffi::c_int + x_xjtr_1 as ::core::ffi::c_int)
        as u8;
}
unsafe extern "C" fn foo_xjtr_0(argc: i32) -> u8 {
    let mut x: u8 = 'a' as u8;
    return (argc as ::core::ffi::c_char as ::core::ffi::c_int + x as ::core::ffi::c_int) as u8;
}
unsafe fn main_0(
    mut argc: ::core::ffi::c_int,
    mut argv: *mut *mut ::core::ffi::c_char,
) -> ::core::ffi::c_int {
    foo(argc);
    foo_xjtr_0(argc);
    return 0 as ::core::ffi::c_int;
}
pub fn main() -> ExitCode {
    let mut args_strings: Vec<Vec<u8>> = ::std::env::args()
        .map(|arg| {
            ::std::ffi::CString::new(arg)
                .expect("Failed to convert argument into CString.")
                .into_bytes_with_nul()
        })
        .collect();
    let mut args_ptrs: Vec<*mut ::core::ffi::c_char> = args_strings
        .iter_mut()
        .map(|arg| arg.as_mut_ptr() as *mut ::core::ffi::c_char)
        .chain(::core::iter::once(::core::ptr::null_mut()))
        .collect();
    let argc = (args_ptrs.len() - 1) as ::core::ffi::c_int;
    let argv = args_ptrs.as_mut_ptr() as *mut *mut ::core::ffi::c_char;
    unsafe { ExitCode::from(main_0(argc, argv) as u8) }
}
