c2rust/c2rust-transpile/tests/snapshots/snapshots__transpile@tenjin_guided_array.c.2024.clang15.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/tenjin_guided_array.2024.clang15.rs
---
#![allow(
    clippy::missing_safety_doc,
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unsafe_op_in_unsafe_fn,
    unused_assignments,
    unused_mut
)]
use ::std::process::ExitCode;
#[unsafe(no_mangle)]
pub static mut GUIDED_STRINGS: [&'static [u8]; 2] = [b"zero\0", b"one\0"];
#[unsafe(no_mangle)]
pub unsafe extern "C" fn first_guided_string() -> *const u8 {
    return GUIDED_STRINGS[0usize].as_ptr() as *const u8;
}
unsafe fn main_0() -> ::core::ffi::c_int {
    return (GUIDED_STRINGS[0usize][0 as usize] as ::core::ffi::c_int != 'z' as ::core::ffi::c_int
        || *first_guided_string().offset(0 as isize) as ::core::ffi::c_int
            != 'z' as ::core::ffi::c_int) as ::core::ffi::c_int;
}
pub fn main() -> ExitCode {
    unsafe { ExitCode::from(main_0() as u8) }
}
